--- a/app/views/main/index.html.slim
+++ b/app/views/main/index.html.slim
@@ -1,21 +1,21 @@
 div.row ng-hide="personShowed"
   div.col-xs-12
-    form ng-submit="addPerson()"
+    form.form-inline ng-submit="addPerson()"
       | Create person:
-      input type="text" placeholder="First name" ng-model="newPerson.first_name" required=""
-      input type="text" placeholder="Last name" ng-model="newPerson.last_name" required=""
+      input.form-control type="text" placeholder="First name" ng-model="newPerson.first_name"
+      input.form-control type="text"  placeholder="Last name" ng-model="newPerson.last_name"
       span
-        span.email ng-repeat="email_address in newPerson.email_addresses_attributes"
-          input type="email" placeholder="Email address" ng-model="email_address.email"
-          input type="button" value="-" ng-click="deleteEmailAddress(email_address)"
-        input type="button" value="+" ng-click="addFieldEmail()"
+        span.email ng-repeat="email_address in newPerson.email_addresses_attributes | filter: {'_destroy': '!1'}"
+          input.form-control type="email" placeholder="Email address" ng-model="email_address.email"
+          input.btn.btn-default type="button" value="-" ng-click="deleteEmailAddress(email_address)"
+        input.btn.btn-default type="button" value="+" ng-click="addFieldEmail()"
       span
-        span.email ng-repeat="phone_number in newPerson.phone_numbers_attributes"
-          input type="tel" placeholder="Phone number" ng-model="phone_number.phone_number"
-          input type="button" value="-" ng-model="phone_number._destroy" ng-click="deletePhoneNumber(phone_number)"
-        input type="button" value="+" ng-click="addFieldPhone()"
-      input type="submit"
-      br
+        span.email ng-repeat="phone_number in newPerson.phone_numbers_attributes | filter: {'_destroy': '!1'}"
+          input.form-control type="tel" placeholder="Phone number" ng-model="phone_number.phone_number"
+          input.btn.btn-default type="button" value="-" ng-click="deletePhoneNumber(phone_number)"
+        input.btn.btn-default type="button" value="+" ng-click="addFieldPhone()"
+      button.btn.btn-default type="submit"
+        | {{addOrEdit}}
       p.errors
         | {{errors.errors}}
 
@@ -23,13 +23,13 @@ div.row ng-hide="personShowed"
 div.row ng-hide="personShowed"
   div.col-xs-2
     | First name
-    input type="text" ng-model="search.first_name"
+    input.form-control type="text" ng-model="search.first_name"
     br
     | Last name
-    input type="text" ng-model="search.last_name"
+    input.form-control type="text" ng-model="search.last_name"
 
   div.col-xs-10
-    table
+    table.table.table-bordered
       tr
         th
           a href="" ng-click="sort = 'first_name'; reverse=!reverse" First name
@@ -37,16 +37,17 @@ div.row ng-hide="personShowed"
           a href="" ng-click="sort = 'last_name'; reverse=!reverse" Last name
         th Email address
         th Phone numbers
+        th Сontrol panel
       tr.cursor ng-repeat="person in people | filter:search | orderBy:sort:reverse" ng-mouseover="showPanel = true" ng-mouseleave="showPanel = false"
         td ng-click="showPerson(person)"
           | {{person.first_name}}
         td
           | {{person.last_name}}
         td
-          p ng-repeat="email in person.email_addresses_attributes"
+          p ng-repeat="email in person.email_addresses_attributes | filter: {'_destroy': '!1'}"
             | {{email.email}}
         td
-          p ng-repeat="phone in person.phone_numbers_attributes"
+          p ng-repeat="phone in person.phone_numbers_attributes | filter: {'_destroy': '!1'}"
             | {{phone.phone_number}}
         td.panel ng-show="showPanel"
           a href="" ng-click="updatePerson(person)" Edit &nbsp;
