--- a/app/views/main/index.html.slim
+++ b/app/views/main/index.html.slim
@@ -31,7 +31,7 @@ div.row ng-hide="personShowed"
     | Last name
     input.form-control type="text" ng-model="search.last_name"
 
-div.row
+div.row ng-hide="personShowed"
   div.col-xs-6.col-xs-offset-3
     h2.text-center Address book
     table.table.table-bordered
